* 0.11.0-beta.2 (unreleased)
   * Fixed collision polygons not properly being used
   * Allied factions won't help out the player against neutral targets
   * Added missing graphics for meditation chambers
   * Don't allow giving the player names that can't be saved
   * Fixed file.mkdir return value
   * Added file.remove
   * Fixed toggle weapon sets not turning off with only bolt weapons
   * Hardened physics engine a bit to overflow that happens in 49 days of straight game time
   * Fixed trivial memory leak in vpool
   * Allow buying local maps where they are not sold
   * `chapter1`: event claims all the systems just in case
   * `poi`: renamed 'Pristine Derelict' to 'Unusual Derelict'
   * `poi_intro`: fixed typo
   * `achack03`: fixed mission not being acceptable

* 0.11.0-beta.1
   * Gameplay Changes
      * Universe significantly overworked to be more consistent with lore
         * More landable uninhabited spobs, unique locations, and things to discover
         * Reviewed and corrected many descriptions and placement of spobs and systems
         * More in-depth and fleshed out tag system for locations
      * Ship slots and mass limits reworked such that smaller ships get more utility/structural slots to work with
      * Point defense systems that can shoot down missiles and torpedoes
      * Space object (planets, stations, etc.) properties affect quantity of missions available
      * Moved many missions and events to the vn system
      * Can sometimes find POI events with a pulse scanner equipped when entering systems
      * Changed the visuals for some of the nebulas (PSO, Mizar)
      * Pirate bribes cost more depending on your fleet and are based on points not mass
      * Missions are introduced less all at once to the player
      * Blink drives are more flexible but use energy and generate heat
      * Razor class weapons have been completely reworked
      * Can steal more than one outfit from a ship with high boarding bonus