@@ -1,6 +1,7 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <outfit name="Enygma Systems Huntsman Launcher">
  <general>
+  <shortname>E. Huntsman Launcher</shortname>
   <slot>weapon</slot>
   <size>medium</size>
   <license>Heavy Weapon</license>
