@@ -44,6 +44,7 @@
 
   <!-- Outfits -->
   <its:translateRule selector="/outfit/@name" translate="yes"/>
+  <its:translateRule selector="/outfit/general/shortname" translate="yes"/>
   <its:translateRule selector="/outfit/general/typename" translate="yes"/>
   <its:translateRule selector="/outfit/general/description" translate="yes"/>
   <its:translateRule selector="/outfit/general/desc_extra" translate="yes"/>
